# silvver

./: svn-commit.tmp
cmakeModules/: FindARTKP.cmake  FindButterfly.cmake  FindDC1394V1.cmake  FindV4L2.cmake
common/: channel.hpp  channelTypes.hpp  clientType.hpp  connection.cpp  connection.hpp  connection.ipp  exceptions.hpp  ipc.cpp  ipc.hpp  logging.hpp  processorOptions.hpp  request.hpp  sconsUtilities.py  serializations.hpp  silverTypes.hpp  silvverImage.hpp  silvverTypes.hpp  singleton.hpp  targetType.hpp  tcpIp.cpp  tcpIp.hpp  tsostream.hpp  version.hpp
doc/: silvver.tex
libsilver_client/: SConstruct  interface.doxygen  silvver_cliente.doxygen
libsilvver_client/: CMakeLists.txt  SConstruct
libsilvver_client/bindings/: CMakeLists.txt  silvver.i
libsilvver_client/bindings/player/doc/player_2_0/: Makefile  fiducial.c
libsilvver_client/bindings/player/src/: silvverDriver2_1.hpp
libsilvver_client/bindings/python/: CMakeLists.txt  pythonSilvver.i  silvver.i
libsilvver_client/doc/: Makefile  abstractCamera_client.cpp  raw_client.cpp  silvver_client.cpp  simple_client.cpp
libsilvver_client/doc/cpp/: Makefile  abstractCamera.cpp  abstractCameraCallback.cpp  saveImage.cpp  simpleAbstractCamera.cpp  simpleTargetSet.cpp  targetPose.cpp  targetTimedWait.cpp
libsilvver_client/doc/python/: abstractCamera.py  abstractCameraCallback.py  saveImage.py  simpleAbstractCamera.py  simpleTarget.py  simpleTargetSet.py  targetPose.py  targetTimedWait.py
libsilvver_client/src/: CMakeLists.txt  SConscript  abstractCamera.cpp  abstractCamera.hpp  callbackWrapper.hpp  camera.cpp  camera.hpp  connection.cpp  connection.hpp  connection.ipp  exceptions.cpp  exceptions.hpp  genericClient.hpp  rawTarget.cpp  rawTarget.hpp  target.cpp  target.hpp  targetSet.cpp  targetSet.hpp
libsilvver_cliente/: Makefile.am  README  SConstruct  configure.ac  silvver_cliente.doxygen
player_driver/: SConstruct
silverTypes/libsilvver_cliente/: configure.ac
silverTypes/libsilvver_cliente/doc/: Makefile
silverTypes/libsilvver_cliente/src/: Makefile.am  conexao.cpp  marco.cpp
silver_cameras/: SConstruct
silver_server/: SConstruct
silvver_cameras/: CMakeLists.txt  SConstruct  configure.ac  silvver_cameras.ggo  silvver_cameras.vcproj
silvver_cameras/Debug/: Cores.txt
silvver_cameras/Debug/cores/: rosa.txt
silvver_cameras/Debug/data/: cameras.xml
silvver_cameras/Debug/data/4x4patt/: 4x4_10.patt  4x4_13.patt  4x4_14.patt  4x4_15.patt  4x4_16.patt  4x4_19.patt  4x4_20.patt  4x4_23.patt  4x4_29.patt  4x4_3.patt  4x4_30.patt  4x4_34.patt  4x4_35.patt  4x4_36.patt  4x4_38.patt  4x4_39.patt  4x4_7.patt  4x4_8.patt
silvver_cameras/calibration/: silvverExtCalib  silvverIntCalib  silvverIntCalib_v1  silvverIntCalib_v2
silvver_cameras/cmake/: FindARTKP.cmake  FindBorboleta.cmake  FindDC1394V2.cmake  FindOPENCV.cmake  FindPyOpenCV.cmake  pyOpenCv.py
silvver_cameras/doc/: dc1394.lua  pseudoCam.lua  pseudoCam.xml  webcam.lua
silvver_cameras/doc/artkpImgs/4x4patt/: 4x4_12.patt  4x4_17.patt  4x4_18.patt  4x4_22.patt  4x4_25.patt  4x4_31.patt  4x4_33.patt  4x4_5.patt  4x4_6.patt  4x4_9.patt
silvver_cameras/lua/: cameraConstructors.lua  silvver.lua  targetConstructors.lua
silvver_cameras/lua/silvver/: cameraConstructors.lua  cameraId.lua  targetConstructors.lua
silvver_cameras/src/: BlobCamera.cpp  BlobCamera.h  BlobExtractor.cpp  BlobExtractor.h  CMakeLists.txt  Camera.cpp  Camera.h  Filtro.cpp  Filtro.h  Makefile.am  PGRCamera.cpp  PGRCamera.h  SConscript  abstractCamera.cpp  abstractCamera.hpp  abstractCameraFactory.cpp  abstractCameraFactory.hpp  blobCamera.cpp  blobCamera.h  blobCamera.hpp  blobExtractor.cpp  blobExtractor.hpp  camera.cpp  camera.h  camera.hpp  cameraConfig.cpp  cameraConfig.hpp  cfParser.cpp  cfParser.hpp  cfReader.cpp  cfReader.hpp  cmdline.c  cmdline.h  conexao.cpp  conexao.h  conexao.hpp  connection.cpp  connection.hpp  connection.ipp  controlador.cpp  (+52 more)
silvver_cameras/src/abstractCameras/: abstractCamera.cpp  abstractCamera.hpp  artkpCamera.cpp  artkpCamera.hpp  borboletaCamera.cpp  borboletaCamera.hpp  butterflyCamera.cpp  butterflyCamera.hpp  mountedTarget.cpp  mountedTarget.hpp  targetDescriptions.hpp
silvver_cameras/src/hardCameras/: colorConverter.cpp  colorConverter.hpp  dc1394.cpp  dc1394.hpp  dc1394_1x.cpp  dc1394_1x.hpp  dc1394_2x.cpp  dc1394_2x.hpp  hardCamera.cpp  hardCamera.hpp  hardCameraDescriptions.hpp  modelos.h  modelos.hpp  pgr.cpp  pgr.h  pgr.hpp  pseudoCamera.cpp  pseudoCamera.h  pseudoCamera.hpp  timestampMap.cpp  timestampMap.hpp  v4l2.cpp  v4l2.hpp
silvver_cameras/src/hardCameras/conversions/: bayer.c
silvver_cameras/src/tinyXml/: tinyxml.h
silvver_server/src/: CMakeLists.txt  SConscript  blobTratador.hpp  clientMultiMap.cpp  clientMultiMap.hpp  clientsMap.cpp  clientsMap.hpp  connection.cpp  connection.hpp  connection.ipp  exceptions.cpp  exceptions.hpp  input.hpp  input.ipp  inputBase.hpp  inputFactory.cpp  inputFactory.hpp  inputInterface.hpp  ioConnection.cpp  ioConnection.hpp  log.cpp  log.hpp  main.cpp  markerProcessor.cpp  markerProcessor.hpp  outputMap.cpp  outputMap.hpp  outputMultiMap.cpp  outputMultiMap.hpp  processor.hpp  processor.ipp  processorBase.hpp  processorFactory.cpp  processorFactory.hpp  processorInterface.hpp  receptionist.cpp  receptionist.hpp  streamConnection.hpp  streamConnection.ipp
silvver_servidor/: configure.ac  silvver_servidor.ggo
silvver_servidor/src/: Makefile.am  Receptor.cpp  Receptor.h  artpMarkInput.cpp  artpMarkInput.hpp  blobTratador.cpp  blobTratador.h  blobTratador.hpp  cameraControllers.cpp  cameraControllers.hpp  clientsMap.cpp  clientsMap.hpp  cmdline.c  colorBlobInput.cpp  colorBlobInput.hpp  conexao.cpp  conexao.h  connection.cpp  connection.hpp  entradas.cpp  entradas.h  entradas.hpp  input.hpp  inputFactory.cpp  inputFactory.hpp  inputInterface.hpp  input_impl.hpp  inputs.cpp  inputs.hpp  ioConnection.hpp  ioConnection.ipp  main.cpp  marcaTratador.cpp  marcaTratador.h  marcaTratador.hpp  markerProcessor.cpp  markerProcessor.hpp  outputs.cpp  outputs.hpp  outputs_impl.hpp  (+15 more)
(+178 files in other folders)
