CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/../cmakeModules)

PROJECT(silvver_client CXX)

INCLUDE_DIRECTORIES(../)
INCLUDE_DIRECTORIES(../common)

ADD_SUBDIRECTORY(src)
# ADD_SUBDIRECTORY(bindings)

INSTALL(DIRECTORY doc/
        DESTINATION share/doc/silvver/client_examples/
        PATTERN "*~" EXCLUDE
        PATTERN ".*" EXCLUDE)
