CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)

PROJECT(silvver_cameras CXX)

INCLUDE_DIRECTORIES(../common)

ADD_SUBDIRECTORY(src)

INSTALL(DIRECTORY lua/
        DESTINATION share/lua/5.1
        PATTERN "*~" EXCLUDE
        PATTERN ".*" EXCLUDE)

INSTALL(DIRECTORY calibration/
        DESTINATION bin
        PATTERN "*~" EXCLUDE
        PATTERN ".*" EXCLUDE)