AM_CPPFLAGS = -Wall
bin_PROGRAMS = silver_servidor

silver_servidor_SOURCES = connection.cpp \
                          connection.hpp \
                          inputFactory.cpp \
                          inputFactory.hpp \
                          input.hpp \
                          input_impl.hpp \
                          inputInterface.hpp \
                          main.cpp \
                          markerProcessor.cpp \
                          markerProcessor.hpp \
                          outputs.cpp \
                          outputs.hpp \
                          processorFactory.hpp \
                          processorFactory_impl.hpp \
                          processor.hpp \
                          processor_impl.hpp \
                          processorInterface.hpp \
                          receptionist.cpp \
                          receptionist.hpp \
                          silverTypes.hpp
