AM_CPPFLAGS = -Wall -pthread -I../../common
bin_PROGRAMS = silver_servidor

silver_servidor_SOURCES = clientsMap.cpp \
                          clientsMap.hpp \
                          inputFactory.cpp \
                          inputFactory.hpp \
                          input.hpp \
                          input_impl.hpp \
                          inputInterface.hpp \
                          ioConnection.cpp \
                          main.cpp \
                          markerProcessor.cpp \
                          markerProcessor.hpp \
                          outputs.hpp \
                          outputs_impl.hpp \
                          processorFactory.hpp \
                          processorFactory_impl.hpp \
                          processor.hpp \
                          processor_impl.hpp \
                          processorInterface.hpp \
                          receptionist.cpp \
                          receptionist.hpp \
                          silverTypes.hpp
