FIND_PACKAGE(SWIG)
FIND_PACKAGE(PythonLibs)

IF(SWIG_FOUND AND PYTHONLIBS_FOUND)
  INCLUDE(${SWIG_USE_FILE})
  INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_DIRS})

  SET(SOURCE silvver.i)
  SET_SOURCE_FILES_PROPERTIES(${SOURCE} PROPERTIES CPLUSPLUS ON)

  SWIG_ADD_MODULE(silvver python ${SOURCE})

  SWIG_LINK_LIBRARIES(silvver silvver_client)

  ADD_DEPENDENCIES(${SWIG_MODULE_silvver_REAL_NAME} silvver_client)

  SET(BINDINGS ${BINDINGS} "Python" PARENT_SCOPE)
ENDIF(SWIG_FOUND AND PYTHONLIBS_FOUND)
